<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pomodoro"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_time"
        android:textSize="@dimen/text_size_timer_display"
        android:textStyle="bold"
        android:textColor="@color/timer_display_color"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerDisplay">

        <Button
            android:id="@+id/startButton"
            android:text="@string/button_start"
            android:layout_marginEnd="@dimen/margin_standard"
            style="@style/PomodoroButton.Start" />

        <Button
            android:id="@+id/pauseButton"
            android:text="@string/button_pause"
            android:layout_marginEnd="@dimen/margin_standard"
            style="@style/PomodoroButton.Pause" />

        <Button
            android:id="@+id/resetButton"
            android:text="@string/button_reset"
            style="@style/PomodoroButton.Reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/modeIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_focus"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContainer" />

    <ImageView
        android:id="@+id/animatedImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeIndicator"
        android:visibility="gone"
        tools:src="@drawable/foco"
        />

    <TextView
        android:id="@+id/breakMessageDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>